2018-06-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Skip adding empty raw profile.
	Fixes oss-fuzz "graphicsmagick/coder_PNG_fuzzer:
	Heap-buffer-overflow in png_read_raw_profile". (Credit to
	OSS-Fuzz)

2018-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update NEWS with latest changes.

	* coders/dcm.c (DCM_ReadRGBImage): Force the image to DirectClass
	to avoid later use of uninitialized indexes.  Fixes oss-fuzz 8602
	"graphicsmagick/coder_DCM_fuzzer: Use-of-uninitialized-value in
	DCM_PostRescaleImage". (Credit to OSS-Fuzz)
	(DCM_ReadPlanarRGBImage): Force the image to DirectClass to avoid
	later use of uninitialized indexes.

	* coders/png.c (ReadMNGImage): Free chunk memory in error
	reporting path to avoid leak.  Fixes oss-fuzz 8721
	"graphicsmagick/coder_MNG_fuzzer: Direct-leak in
	ReadMNGImage". (Credit to OSS-Fuzz)

2018-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (ReadImage): Assure that an error exception
	is thrown if coder returns null without properly reporting an
	exception.

	* magick/blob.c (BlobToImage): Assure that an error exception is
	thrown if coder returns null without properly reporting an
	exception.

	* coders/png.c (ReadMNGImage): Disable mystery "linked list is
	corrupted" code.  Assure that exceptions are reported to the
	correct place so they are not lost.  Fixes oss-fuzz 8710
	"graphicsmagick/coder_MNG_fuzzer: Indirect-leak in
	AllocateImage". (Credit to OSS-Fuzz)

	* coders/tiff.c (ReadTIFFImage): Initialize allocated scanline,
	strip, or tile to zero in order to avoid complaint about use of
	uninitialized data if libtiff fails to write all the bytes.  Fixes
	oss-fuzz 8551 "graphicsmagick/coder_TIFF_fuzzer:
	Use-of-uninitialized-value in ImportGrayQuantumType". (Credit to
	OSS-Fuzz)

	* magick/annotate.c (RenderFreetype): Throw an exception if
	DrawInfo font is null.  Should fix oss-fuzz 8557