@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180604"
-#define public MagickPackageReleaseDate "snapshot-20180604"
+#define public MagickPackageVersionAddendum ".020180605"
+#define public MagickPackageReleaseDate "snapshot-20180605"
